--- a/resources/fxml/drug_add.fxml
+++ b/resources/fxml/drug_add.fxml
@@ -32,6 +32,7 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" />
    </rowConstraints>
    <padding>
       <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
@@ -58,12 +59,14 @@
             <Insets bottom="4.0" left="15.0" right="15.0" top="4.0" />
          </padding>
       </Button>
-      <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="13">
+      <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="14">
         <buttons>
           <Button defaultButton="true" mnemonicParsing="false" onAction="#actionAddDrug" text="%add" />
             <Button cancelButton="true" mnemonicParsing="false" onAction="#actionExit" text="%exit" />
         </buttons>
       </ButtonBar>
       <TextField fx:id="tfPrice" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="12" />
+      <ChoiceBox fx:id="cmbAdministrationType" prefWidth="150.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="13" />
+      <Label text="%administrationType" GridPane.rowIndex="13" />
    </children>
 </GridPane>
