--- a/resources/fxml/drug_add.fxml
+++ b/resources/fxml/drug_add.fxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import java.net.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import java.net.URL?>
+
 <GridPane hgap="5.0" vgap="5.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.Controllers.DrugAddController">
    <stylesheets>
       <URL value="@/css/drug_image.css" />
@@ -45,9 +46,12 @@
       <TextField fx:id="tfNameEng" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
       <TextField fx:id="tfNameBos" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" />
       <TextField fx:id="tfNameLat" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
-      <TextArea fx:id="taContent" prefHeight="94.0" prefWidth="205.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5" GridPane.rowSpan="3" />
-      <TextArea fx:id="taPurpose" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="8" GridPane.rowSpan="3" />
+      <TextArea fx:id="taContent" focusTraversable="false" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5" GridPane.rowSpan="3" />
+      <TextArea fx:id="taPurpose" focusTraversable="false" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="8" GridPane.rowSpan="3" />
       <DatePicker fx:id="dpExpDate" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="11" />
+      <TextField fx:id="tfPrice" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="12" />
+      <ChoiceBox fx:id="cmbAdministrationType" prefWidth="150.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="13" />
+
       <Label text="%expDate" GridPane.rowIndex="11" />
       <Label text="%price" GridPane.rowIndex="12" />
       <Label text="%drugInf" GridPane.columnSpan="2" />
@@ -64,8 +68,6 @@
             <Button cancelButton="true" mnemonicParsing="false" onAction="#actionExit" text="%exit" />
         </buttons>
       </ButtonBar>
-      <TextField fx:id="tfPrice" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="12" />
-      <ChoiceBox fx:id="cmbAdministrationType" prefWidth="150.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="13" />
       <Label text="%administrationType" GridPane.rowIndex="13" />
    </children>
 </GridPane>
