--- a/resources/fxml/drug_edit.fxml
+++ b/resources/fxml/drug_edit.fxml
@@ -45,9 +45,12 @@
         <TextField fx:id="tfNameEng" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
         <TextField fx:id="tfNameBos" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" />
         <TextField fx:id="tfNameLat" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
-        <TextArea fx:id="taContent" prefHeight="94.0" prefWidth="205.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5" GridPane.rowSpan="3" />
-        <TextArea fx:id="taPurpose" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="8" GridPane.rowSpan="3" />
+        <TextArea fx:id="taContent" focusTraversable="false" prefHeight="94.0" prefWidth="205.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5" GridPane.rowSpan="3" />
+        <TextArea fx:id="taPurpose" focusTraversable="false" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="8" GridPane.rowSpan="3" />
         <DatePicker fx:id="dpExpDate" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="11" />
+        <TextField fx:id="tfPrice" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="12" />
+        <ChoiceBox fx:id="cmbAdministrationType" prefWidth="150.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="13" />
+
         <Label text="%expDate" GridPane.rowIndex="11" />
         <Label text="%price" GridPane.rowIndex="12" />
         <Label text="%drugInf" GridPane.columnSpan="2" />
@@ -64,8 +67,6 @@
                 <Button cancelButton="true" mnemonicParsing="false" onAction="#actionExit" text="%exit" />
             </buttons>
         </ButtonBar>
-        <TextField fx:id="tfPrice" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="12" />
-        <ChoiceBox fx:id="cmbAdministrationType" prefWidth="150.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="13" />
-        <Label text="%administrationType" GridPane.rowIndex="13" />
+       <Label text="%administrationType" GridPane.rowIndex="13" />
     </children>
 </GridPane>
