--- a/resources/fxml/drug_add.fxml
+++ b/resources/fxml/drug_add.fxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import java.net.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import java.net.URL?>
+
 <GridPane hgap="5.0" vgap="5.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.Controllers.DrugAddController">
    <stylesheets>
       <URL value="@/css/text_field_custom.css" />
@@ -64,7 +65,7 @@
       <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="14">
         <buttons>
           <Button defaultButton="true" mnemonicParsing="false" onAction="#actionAddDrug" text="%add" />
-            <Button cancelButton="true" mnemonicParsing="false" onAction="#actionExit" text="%exit" />
+            <Button fx:id="btnExitDrugAdd" cancelButton="true" mnemonicParsing="false" onAction="#actionExit" text="%exit" />
         </buttons>
       </ButtonBar>
       <Label text="%administrationType" GridPane.rowIndex="13" />
